--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,7 @@ The **R** package 'RLumCarlo' provides a collection of R functions modelling lum
 * ~~run_MC_TL_LOC.R~~
 * ~~run_MC_TL_TUN.R~~
 
-* Documentation checked by Christoph? 
+* ~~Documentation checked by Christoph?~~
 * ~~Documentation verified by Vasilis?~~
 * Vignette checked by Vasilis?
 * Vignette checked by Christoph?
