--- a/vignettes/RLumCarlo_-_Getting_started_with_RLumCarlo.Rmd
+++ b/vignettes/RLumCarlo_-_Getting_started_with_RLumCarlo.Rmd
@@ -37,11 +37,16 @@ electrons <- data.frame(
 
 # Scope
 
-RLumCarlo is a collection of energy-band models to simulate luminescence signals using Monte-Carlo (MC) methods for various stimulation modes. This document aims at supplementing the package documentation and elaborates the package examples. 
+RLumCarlo is a collection of energy-band models to simulate luminescence signals in dosimeteric materials
+using Monte-Carlo (MC) methods for various stimulation modes. This document aims at supplementing 
+the package documentation and it elaborates the package examples. 
 
 # The models in RLumCarlo
 
-The following table lists all models implemented in RLumCarlo along with the **R** function call and the corresponding R (\*.R) and C++ (\*.cpp) files. The modelling takes place in the C++ functions which are wrapped by the R functions with a similar name. If you, however, want to cross-check the code, you should inspect files with the ending '.cpp'. 
+The following table lists all models implemented in RLumCarlo along with the **R** function call 
+and the corresponding R (\*.R) and C++ (\*.cpp) files. The modelling takes place 
+in the C++ functions which are wrapped by the R functions with a similar name. 
+If you, however, want to cross-check the code, you should inspect files with the ending `.cpp`. 
 
 ```{r, echo = FALSE, message=FALSE}
 ## extract models
@@ -61,12 +66,16 @@ knitr::kable(df, booktabs = TRUE, linesep = "\\addlinespace") %>%
   column_spec(1, bold = TRUE)
 ```
 
-Each model is run by calling one of the **R** functions starting with `run_`. Currently, three different model types (TUN: tunnelling, LOC: localised transition, DELOC: delocalised transition) are implemented for the stimulation types TL, IRSL, LM-OSL, and ISO (isothermal). 
+Each model is run by calling one of the **R** functions starting with `run_`. Currently, three 
+different model types (TUN: tunnelling, LOC: localised transition, DELOC: delocalised transition) 
+are implemented for the stimulation types TL, IRSL, LM-OSL, and ISO (isothermal). 
 Please note that each model has different parameters and requirements. 
 
 # RLumCarlo model parameters and variables
 
-The following table summarises the parameters used in the implemented MC models along with their physical meaning, units and the range of realistic values. This range represents just a rough guideline and might be exceeded for particular cases.
+The following table summarises the parameters used in the implemented MC models along with 
+their physical meaning, units and the range of realistic values. This range represents just a rough 
+guideline and might be exceeded for particular cases.
 
 ```{r, echo = FALSE, message=FALSE}
 
@@ -83,22 +92,27 @@ knitr::kable(variables, booktabs = TRUE, longtable = TRUE, format = "latex", col
 
 # Examples
 
-The following examples exemplify the capacity of RLumCarlo, by using an example with longer simulation times than allowed for the standard package examples, which aim at a functionality test. 
+The following examples illustrate the capacity of RLumCarlo, by using code-snippets deploying longer 
+simulation times than allowed for the standard package examples, which aim at a functionality test. 
 
 ## Example 1: A first example
 
-The first examples iso-thermal curve using the tunnelling model (other models work 
-similar). Returned are either the simulated signal or the estimated remaining charges. The Function `plot_RLumCarlo()` provides an easy way to visualise the modelling results and is here called using the 
-tee operator `%T>` from the package `magrittr` (which is imported by RLumCarlo). Simulation results are stored in the object `results` while, at the same time, piped to the function 
+The first examples an iso-thermal curve using the tunnelling model (other models work 
+similar). Returned are either the simulated signal or the estimated remaining charges. 
+The Function `plot_RLumCarlo()` provides an easy way to visualise the modelling results and 
+is here called using the tee operator `%T>` from the package `magrittr` (which is imported by RLumCarlo). 
+Simulation results are stored in the object `results` while, at the same time, piped to the function 
 `plot_RLumCarlo()` for the output visualisation. 
 
 ### Model the signal  
  
-The most obvious modelling output is the luminescence signal itself, our example below simulates an iso-thermal (ITL) signal for a temperature (`T`) of 200 $^{\circ}$C over 
-5,000 s using a tunnelling transition model. Trap parameters are E = 1.2 (eV) for the trap 
-depth and a frequency factor for $1\times10^{10}$ (1/s). The parameter `rho` ($\rho$) defines the recombination centre density. 
+The most obvious modelling output is the luminescence signal itself, our example below simulates an 
+iso-thermal (ITL) signal for a temperature (`T`) of 200 $^{\circ}$C over 
+5,000 s using a tunnelling transition model. Trap parameters are $E = 1.2$ eV for the trap 
+depth and a frequency factor for $1\times10^{10}$ (1/s). The parameter `rho` ($\rho$) defines the 
+recombination centre density. 
 
-```{r Fig 1, fig.align='center', cache=TRUE}
+```{r Fig 1, fig.align='center', cache=TRUE, fig.height=4, fig.width=5}
 results <- run_MC_ISO_TUN(
   E = 1.2,
   s = 1e10,
@@ -111,9 +125,11 @@ results <- run_MC_ISO_TUN(
 
 ### Model remaining charges
 
-The first example can be slightly varified. Instead of the luminescence signal, the variant returns the number of remaining electrons in the trap. 
+The first example can be slightly altered to provide alternative insight. 
+Instead of the luminescence signal, below the variant returns 
+the number of remaining electrons in the trap. 
 
-```{r Fig 2, fig.align='center', cache=TRUE}
+```{r Fig 2, fig.align='center', cache=TRUE, fig.height=4, fig.width=5}
 results <- run_MC_ISO_TUN(
   E = 1.2,
   s = 1e10,
@@ -129,23 +145,26 @@ results <- run_MC_ISO_TUN(
 ```
 
 ### Understanding the numerical output
-In both cases the modelling output is an object of class `RLumCarlo_Model_Output`, which is basically a list consisting of an array and a vector. 
+In both cases the modelling output is an object of class `RLumCarlo_Model_Output`, 
+which is basically a list consisting of an `array` and a `numeric` (vector). 
 
 ```{r}
 str(results)
 ```
 
-While this represents the full modelling output results, its interpretation might be less straight forward, and the user may want to condense the information via `summary()`. 
-The function `summary()` is also used internally by the function `plot_RLumCarlo()`.
+While this represents the full modelling output results, its interpretation might be less straight forward, 
+and the user may want to condense the information via `summary()`. The 
+function `summary()` is also used internally by the function `plot_RLumCarlo()` to simplify the data
+before there are plotted.
 
 ```{r}
 df <- summary(results)
 head(df)
 ```
 
-The call summarises the modelling results and returns a terminal output and a `data.frame` with, e.g., the mean or the standard deviation, which can be used to create plots for further insight. For instance, the stimulation time against coefficient of variation (CV, in %): 
+The call summarises the modelling results and returns a terminal output and a `data.frame` with, e.g., the mean or the standard deviation, which can be used to create plots for further insight. For instance, the stimulation time against coefficient of variation (CV in %): 
  
-```{r Fig 3, fig.align="center"}
+```{r Fig 3, fig.align="center", fig.height=4, fig.width=5}
 plot(
   x = df$time,
   y = (df$sd / df$mean) * 100,
@@ -158,9 +177,10 @@ plot(
 
 ## Example 2: Combining two plots
 
-The following examples use again the tunneling model but for continuous wave (CW) infrared light stimulation (IRSL), and they combine two plots in one single plot window. 
+The following examples use again the tunnelling model but for continuous wave (CW) infrared light stimulation (IRSL), 
+and they combine two plots in one single plot window. 
 
-```{r Fig 4, fig.align='center'}
+```{r Fig 4, fig.align='center', fig.height=4, fig.width=5}
 ## set time vector 
 times <- seq(0, 1000)
 
@@ -200,7 +220,7 @@ results <- lapply(r_c, function(x) {
 The plot output can be highly customised to provide a better visual experience, e.g., 
 the manual setting of the colours and the legend.
 
-```{r Fig 6,Plot average signal, fig.align='center', echo = TRUE, cache = TRUE}
+```{r Fig 6,Plot average signal, fig.align='center', echo = TRUE, cache = TRUE, fig.height=4, fig.width=5}
 ## plot curves, but without legend
 plot_RLumCarlo(
   object = results, 
@@ -214,7 +234,7 @@ plot_RLumCarlo(
 
 ## add legend manually
 legend(
-  "topright",
+  "topleft",
   bty = "n",
   legend = paste0("r_c: ", r_c),
   lty = 1,
