--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.tex
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.tex
@@ -11,37 +11,37 @@
  &  &  & Johannes Friedrich, University of Bayreuth (Germany), Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060,$<$br /$>$ Université Bordeaux Montaigne (France)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. plot\_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   3 & run\_MC\_CW\_IRSL\_LOC & Monte-Carlo Simulation for CW-IRSL (localized transitions) & Runs a Monte-Carlo (MC) simulation of continuous wave infrared stimulated luminesence (CW-IRSL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do not involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trapped charge, and also involve an energy state of the recombination center. & 0.1.0
- &  &  & Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_CW\_IRSL\_LOC(): Monte-Carlo Simulation for CW-IRSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+ &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_CW\_IRSL\_LOC(): Monte-Carlo Simulation for CW-IRSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   4 & run\_MC\_CW\_IRSL\_TUN & Run Monte-Carlo Simulation for CW-IRSL (tunneling transitions) & Runs a Monte-Carlo (MC) simulation of continuous wave infrared stimulated luminesence (CW-IRSL) using the model for tunneling transitions. Tunneling refers to quantum mechanical tunneling processes from the excited state of the trap, into a recombination center. & 0.2.0
  &  &  & Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, Université Bordeaux Montaigne (France)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. run\_MC\_CW\_IRSL\_TUN(): Run Monte-Carlo Simulation for CW-IRSL (tunneling transitions). Function version 0.2.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
-  5 & run\_MC\_CW\_OSL\_DELOC & Run Monte-Carlo Simulation for CW-OSL (delocalized transitions) & Runs a Monte-Carlo (MC) simulation of continuous wave optically stimulated luminesence (CW-OSL) using the one trap one recombination center (OTOR) model. The term delocalized here refers to the involvement of the conduction band. & 0.1.0
- &  &  & Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_CW\_OSL\_DELOC(): Run Monte-Carlo Simulation for CW-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+  5 & run\_MC\_CW\_OSL\_DELOC & Run Monte-Carlo Simulation for CW-OSL (delocalized transitions) & Runs a Monte-Carlo (MC) simulation of continuous wave optically stimulated luminescence (CW-OSL) using the one trap one recombination centre (OTOR) model. The term delocalized here refers to the involvement of the conduction band. & 0.1.0
+ &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_CW\_OSL\_DELOC(): Run Monte-Carlo Simulation for CW-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   6 & run\_MC\_ISO\_DELOC & Run Monte-Carlo Simulation for ISO-TL (delocalized transitions) & Runs a Monte-Carlo (MC) simulation of isothermally stimulated luminesence (ISO-TL or ITL) using the one trap one recombination center (OTOR) model. Delocalized refers to involvement of the conduction band. & 0.1.0
- &  &  & Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_ISO\_DELOC(): Run Monte-Carlo Simulation for ISO-TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+ &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_ISO\_DELOC(): Run Monte-Carlo Simulation for ISO-TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   7 & run\_MC\_ISO\_LOC & Run Monte-Carlo simulation for ISO-TL (localized transitions) & Runs a Monte-Carlo (MC) simulation of isothermally stimulated luminesence (ISO-TL or ITL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do no involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trapped charge, and also involve an energy state of the recombination center. & 0.1.0
- &  &  & Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_ISO\_LOC(): Run Monte-Carlo simulation for ISO-TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+ &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_ISO\_LOC(): Run Monte-Carlo simulation for ISO-TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   8 & run\_MC\_ISO\_TUN & Monte-Carlo Simulation for ISO-TL (tunneling transitions) & Runs a Monte-Carlo (MC) simulation of isothermally stimulated luminesence (ISO-TL or ITL) using the tunneling (TUN) model. Tunneling refers to quantum mechanical tunneling processes from the excited state of the trapped charge, into the recombination center. & 0.1.0
- &  &  & Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. run\_MC\_ISO\_TUN(): Monte-Carlo Simulation for ISO-TL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+ &  &  & Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. run\_MC\_ISO\_TUN(): Monte-Carlo Simulation for ISO-TL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   9 & run\_MC\_LM\_OSL\_DELOC & Run Monte-Carlo Simulation for LM-OSL (delocalized transitions) & Runs a Monte-Carlo (MC) simulation of linearly modulated optically stimulated luminesence (LM-OSL) using the one trap one recombination center (OTOR) model. Delocalized refers to involvement of the conduction band. & 0.1.0
- &  &  & Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_LM\_OSL\_DELOC(): Run Monte-Carlo Simulation for LM-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+ &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_LM\_OSL\_DELOC(): Run Monte-Carlo Simulation for LM-OSL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   10 & run\_MC\_LM\_OSL\_LOC & Run Monte-Carlo Simulation for LM-OSL (localized transitions) & Runs a Monte-Carlo (MC) simulation of linearly modulated optically stimulated luminesence (LM-OSL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do not involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trap, and also involve a an energy state of the recombination center. & 0.1.0
- &  &  & Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_LM\_OSL\_LOC(): Run Monte-Carlo Simulation for LM-OSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+ &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_LM\_OSL\_LOC(): Run Monte-Carlo Simulation for LM-OSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   11 & run\_MC\_LM\_OSL\_TUN & Run Monte-Carlo Simulation for LM-OSL (tunneling transitions) & Runs a Monte-Carlo (MC) simulation of linearly modulated optically stimulated luminesence (LM-OSL) using the tunneling (TUN) model. Tunneling refers to quantum mechanical tunneling processes from the excited state of the trapped charge, into a recombination center. & 0.1.0
  &  &  & Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS-Université Bordeaux Montaigne (France)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. run\_MC\_LM\_OSL\_TUN(): Run Monte-Carlo Simulation for LM-OSL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   12 & run\_MC\_TL\_DELOC & Run Monte-Carlo Simulation for TL (delocalized transitions) & Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) using the one trap one recombination center (OTOR) model. Delocalized refers to involvement of the conduction band. The heating rate in this function is assumed to be 1 K/s. & 0.1.0
- &  &  & Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_TL\_DELOC(): Run Monte-Carlo Simulation for TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+ &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_TL\_DELOC(): Run Monte-Carlo Simulation for TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   13 & run\_MC\_TL\_LOC & Run Monte-Carlo Simulation for TL (localized transitions) & Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do not involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trapped charge, and also involve an energy state of the recombination center. The heating rate in this function is assumed to be 1 K/s. & 0.1.0
- &  &  & Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_TL\_LOC(): Run Monte-Carlo Simulation for TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+ &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_TL\_LOC(): Run Monte-Carlo Simulation for TL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   14 & run\_MC\_TL\_TUN & Run Monte-Carlo Simulation for TL (tunneling transitions) & Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) caused by tunnelling (TUN) transitions.  Tunneling refers to quantum mechanical tunneling processes from the excited state of the trap into a recombination center. The heating rate in this function is assumed to be 1 K/s. & 0.1.0
  &  &  & Johannes Friedrich, University of Bayreuth (Germany), Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, UMR 5060, Université Bordeaux Montaigne (France)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. run\_MC\_TL\_TUN(): Run Monte-Carlo Simulation for TL (tunneling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
