--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-fun_bibliography.bib
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-fun_bibliography.bib
@@ -24,7 +24,7 @@
   year = {2020},
 }
 @InCollection{,
-  title = {run_MC_CW_IRSL_TUN(): Run Monte-Carlo Simulation for CW-IRSL (tunneling transitions)},
+  title = {run_MC_CW_IRSL_TUN(): Run Monte-Carlo Simulation for CW-IRSL (tunnelling transitions)},
   volume = {version: 0.2.0},
   author = {Friedrich J and Kreutzer S},
   booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. },
@@ -56,7 +56,7 @@
   year = {2020},
 }
 @InCollection{,
-  title = {run_MC_ISO_TUN(): Monte-Carlo Simulation for ISO-TL (tunneling transitions)},
+  title = {run_MC_ISO_TUN(): Monte-Carlo Simulation for ISO-TL (tunnelling transitions)},
   volume = {version: 0.1.0},
   author = {Friedrich J and Kreutzer S},
   booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. },
@@ -80,7 +80,7 @@
   year = {2020},
 }
 @InCollection{,
-  title = {run_MC_LM_OSL_TUN(): Run Monte-Carlo Simulation for LM-OSL (tunneling transitions)},
+  title = {run_MC_LM_OSL_TUN(): Run Monte-Carlo Simulation for LM-OSL (tunnelling transitions)},
   volume = {version: 0.1.0},
   author = {Friedrich J and Kreutzer S},
   booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. },
@@ -104,7 +104,7 @@
   year = {2020},
 }
 @InCollection{,
-  title = {run_MC_TL_TUN(): Run Monte-Carlo Simulation for TL (tunneling transitions)},
+  title = {run_MC_TL_TUN(): Run Monte-Carlo Simulation for TL (tunnelling transitions)},
   volume = {version: 0.1.0},
   author = {Friedrich J and Kreutzer S},
   booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. },
