--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.tex
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.tex
@@ -37,7 +37,7 @@
   11 & run\_MC\_LM\_OSL\_TUN & Run Monte-Carlo Simulation for LM-OSL (tunnelling transitions) & Runs a Monte-Carlo (MC) simulation of linearly modulated optically stimulated luminescence (LM-OSL) using the tunnelling (TUN) model. Tunnelling refers to quantum mechanical tunnelling processes from the excited state of the trapped charge, into a recombination centre. & 0.1.0
  &  &  & Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. run\_MC\_LM\_OSL\_TUN(): Run Monte-Carlo Simulation for LM-OSL (tunnelling transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
-  12 & run\_MC\_TL\_DELOC & Run Monte-Carlo Simulation for TL (delocalized transitions) & Runs a Monte-Carlo (MC) simulation of thermoluminesence (TL) using the one trap one recombination center (OTOR) model. Delocalized refers to involvement of the conduction band. The heating rate in this function is assumed to be 1 K/s. & 0.1.0
+  12 & run\_MC\_TL\_DELOC & Run Monte-Carlo Simulation for TL (delocalized transitions) & Runs a Monte-Carlo (MC) simulation of thermoluminescence (TL) using the one trap one recombination centre (OTOR) model. Delocalised refers to involvement of the conduction band. The heating rate in this function is assumed to be 1 K/s. & 0.1.0
  &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_TL\_DELOC(): Run Monte-Carlo Simulation for TL (delocalized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   13 & run\_MC\_TL\_LOC & Run Monte-Carlo Simulation for TL (localized transitions) & Runs a Monte-Carlo (MC) simulation of thermoluminescence (TL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do not involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trapped charge, and also involve an energy state of the recombination centre. The heating rate in this function is assumed to be 1 K/s. & 0.1.0
