--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ Depending on your OS please download and install one of the following:
 
    https://cran.r-project.org/bin/windows/Rtools/
 
-**Mac OS X** - 'Xcode' (provided by Apple)
+**macOS** - 'Xcode' (provided by Apple)
 
    https://developer.apple.com/xcode/downloads/
 
@@ -56,6 +56,15 @@ run_MC_CW_IRSL_TUN(A = 0.12, rho = 0.003, times = 0:1000) %>%
      plot_RLumCarlo(norm = TRUE, legend = TRUE)
 ```
 
+## Supported models
+
+TRANSITION  | BASE MODEL        |    IRSL      |     OSL         |     LM-OSL      | TL 
+|-----------|-------------------|--------------|-----------------|-----------------|---------------|
+Delocalised | OTOR              | FALSE        | TRUE            | TRUE            |TRUE 
+Localised   | GOT               | TRUE         | FALSE           | TRUE            |TRUE
+Excited state tunnelling | Jain et al. (2012)  | TRUE | FALSE | TRUE | TRUE            
+
+
 ## License
 
 This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.
@@ -64,7 +73,7 @@ This program is distributed in the hope that it will be useful, but WITHOUT ANY 
 
 ## <span class="glyphicon glyphicon-euro"></span> Funding
 
-The development of RLumCarlo benefitted from the support by various funding bodies:
+The development of RLumCarlo benefited from the support by various funding bodies:
 
 * The initial work by Johannes Friedrich, Sebastian Kreutzer and Christoph Schmidt was supported by the [DFG (2015–2018, SCHM 3051/4-1, "Modelling quartz luminescence signal dynamics relevant for dating and dosimetry", SCHM 3051/4-1)](https://gepris.dfg.de/gepris/projekt/279969851). 
 
