--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.tex
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.tex
@@ -4,8 +4,8 @@
   \hline
  & Name & Title & Description & Version & m.Date & m.Time & Author & Citation \\ 
   \hline
-1 & methods\_RLumCarlo & methods\_RLumCarlo & Summarize RLumCarlo modelling results for easy plotting & 0.1.0
- &  &  & Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. methods\_RLumCarlo(): methods\_RLumCarlo. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+1 & methods\_RLumCarlo & methods\_RLumCarlo & Methods for S3-generics implemented for the package 'RLumCarlo'.  Summarize RLumCarlo modelling results for easy plotting & 0.1.0
+ &  &  & Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ $<$br /$>$ Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. methods\_RLumCarlo(): methods\_RLumCarlo. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   2 & plot\_RLumCarlo & Plot RLumCarlo Monte-Carlo Simulation Results & Visualise 'RLumCarlo' modelling results without extracting the values manually. Typically visualised are the averaged signal or the number of remaining electrons, with a polygon indicating modelling uncertainties. & 0.1.0
  &  &  & Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. plot\_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
