--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-fun_bibliography.bib
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-fun_bibliography.bib
@@ -1,5 +1,13 @@
 
 @InCollection{,
+  title = {create_ClusterSystem(): Create dosimetric cluster system},
+  volume = {version: 0.1.0},
+  author = {Kreutzer S},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. },
+  publisher = {RLumCarlo},
+  year = {2020},
+}
+@InCollection{,
   title = {methods_RLumCarlo(): methods_RLumCarlo},
   volume = {version: },
   author = {Kreutzer S and Friedrich J},
