--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-fun_bibliography.bib
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-fun_bibliography.bib
@@ -18,7 +18,7 @@
 @InCollection{,
   title = {plot_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results},
   volume = {version: 0.1.0},
-  author = {Friedrich J and Kreutzer S},
+  author = {Kreutzer S and Friedrich J},
   booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. },
   publisher = {RLumCarlo},
   year = {2020},
