--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.tex
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0-Functions.tex
@@ -10,7 +10,7 @@
   2 & methods\_RLumCarlo & methods\_RLumCarlo & Methods for S3-generics implemented for the package 'RLumCarlo'. &  &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom),$<$br /$>$ Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ & Kreutzer, S., Friedrich, J., 2020. methods\_RLumCarlo(): methods\_RLumCarlo. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   3 & plot\_RLumCarlo & Plot RLumCarlo Monte-Carlo Simulation Results & Visualise 'RLumCarlo' modelling results without extracting the values manually. Typically visualised are the averaged signal or the number of remaining electrons, with a polygon indicating modelling uncertainties. & 0.1.0
- &  &  & Johannes Friedrich, University of Bayreuth (Germany),$<$br /$>$ Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Friedrich, J., Kreutzer, S., 2020. plot\_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
+ &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom) $<$br /$>$ Johannes Friedrich, University of Bayreuth (Germany)$<$br /$>$ & Kreutzer, S., Friedrich, J., 2020. plot\_RLumCarlo(): Plot RLumCarlo Monte-Carlo Simulation Results. Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
  \\ 
   4 & run\_MC\_CW\_IRSL\_LOC & Monte-Carlo Simulation for CW-IRSL (localized transitions) & Runs a Monte-Carlo (MC) simulation of continuous wave infrared stimulated luminescence (CW-IRSL) using the generalized one trap (GOT) model. Localized transitions refer to transitions which do not involve the conduction or valence band. These transitions take place between the ground state and an excited state of the trapped charge, and also involve an energy state of the recombination centre. & 0.1.0
  &  &  & Sebastian Kreutzer, Geography \& Earth Sciences, Aberystwyth University (United Kingdom)$<$br /$>$ & Kreutzer, S., 2020. run\_MC\_CW\_IRSL\_LOC(): Monte-Carlo Simulation for CW-IRSL (localized transitions). Function version 0.1.0. In: Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2020. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena. R package version 0.1.0. 
