--- a/README.Rmd
+++ b/README.Rmd
@@ -83,7 +83,7 @@ The development of RLumCarlo benefited from the support by various funding bodie
 by [LabEx LaScArBx (ANR - n. ANR-10-LABX-52)](https://lascarbx.labex.u-bordeaux.fr) between 2017 and 2019.
 
 * From 2020, Sebastian Kreutzer received funding from the European Union’s Horizon 2020
-research and innovation programme under the Marie Skłodowska-Curie grant agreement No 844457
+research and innovation programme under the Marie Skłodowska-Curie grant agreement No 844457.
 
 ## Related projects 
 
