Adress CRAN requests

--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -8,5 +8,9 @@ header-includes:
 
 ## RLumCarlo `r RLumBuild::.get_pkg_version()` (`r Sys.Date()`)
 
+* CRAN request corrections
+
+## RLumCarlo 0.1.0 (2020-05-27)
+
 * Initial version
 
