Fix CRAN requests and prepare new submission

--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -8,6 +8,11 @@ header-includes:
 
 ## RLumCarlo `r RLumBuild::.get_pkg_version()` (`r Sys.Date()`)
 
+* CRAN request corrections, the package URL in the README.md became a little bit more canonical 
+using capital letters for `CRAN` and `R`.
+
+## RLumCarlo 0.1.0 (2020-06-03)
+
 * CRAN request corrections
 
 ## RLumCarlo 0.1.0 (2020-05-27)
