--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -8,10 +8,14 @@ header-includes:
 
 ## RLumCarlo `r RLumBuild::.get_pkg_version()` (`r Sys.Date()`)
 
+* CRAN request correction: Misspelled word in DESCRIPTION corrected
+
+## RLumCarlo 0.1.2 (2020-06-03)
+
 * CRAN request corrections, the package URL in the README.md became a little bit more canonical 
 using capital letters for `CRAN` and `R`.
 
-## RLumCarlo 0.1.0 (2020-06-03)
+## RLumCarlo 0.1.1 (2020-06-03)
 
 * CRAN request corrections
 
