--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -8,18 +8,23 @@ header-includes:
 
 ## RLumCarlo `r RLumBuild::.get_pkg_version()` (`r Sys.Date()`)
 
+* Add automated spell correction and remove odd DOIs and not yet 
+valid links to ease the CRAN inspection
+
+## RLumCarlo 0.1.3 (2020-06-05) (never published on CRAN)
+
 * CRAN request correction: Misspelled word in `DESCRIPTION` corrected
 
-## RLumCarlo 0.1.2 (2020-06-03)
+## RLumCarlo 0.1.2 (2020-06-03) (never published on CRAN)
 
 * CRAN request corrections, the package URL in the `README.md` became a little bit more canonical 
 using capital letters for `CRAN` and `R`.
 
-## RLumCarlo 0.1.1 (2020-06-03)
+## RLumCarlo 0.1.1 (2020-06-03) (never published on CRAN)
 
 * CRAN request corrections
 
-## RLumCarlo 0.1.0 (2020-05-27)
+## RLumCarlo 0.1.0 (2020-05-27) (never published on CRAN)
 
 * Initial version
 
