--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -8,8 +8,7 @@ header-includes:
 
 ## RLumCarlo `r RLumBuild::.get_pkg_version()` (`r Sys.Date()`)
 
-* Add automated spell correction and remove odd DOIs and not yet 
-valid links to ease the CRAN inspection
+* Fix problem on CRAN Solaris
 
 ## RLumCarlo 0.1.3 (2020-06-05) (never published on CRAN)
 
