--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -8,7 +8,9 @@ header-includes:
 
 ## RLumCarlo `r RLumBuild::.get_pkg_version()` (`r Sys.Date()`)
 
-* Dummy
+*This package version needw at least R >= 3.5.0.*
+
+* Update internal tests to function properly with `testthat >= 3.0.0` 
 
 # RLumCarlo 0.1.6 (2020-07-05)
 
