--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ The **R** package RLumCarlo provides a collection of R functions modelling lumin
 Depending on your OS please download and install one of the following:
 
 * *Windows*: [Rtools](https://cran.r-project.org/bin/windows/Rtools/) (provided by CRAN)
-* *macOS*: [Xcode](https://developer.apple.com/xcode/downloads/) (provided by Apple)
+* *macOS*: [Xcode](https://developer.apple.com) (provided by Apple)
 * *Linux*: [gcc](https://gcc.gnu.org) often comes pre-installed in most distributions. Should [gcc](https://gcc.gnu.org) be not available, however, we kindly refer to the exhaustive collection of installation guides depending on the Linux distribution.
 
 #### ii. Install the package from GitHub
